ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-k8s-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/content-security-policy: "default-src 'self'; script-src 'self' https://trusted.script.source; img-src 'self' https://trusted.image.source; style-src 'self' https://trusted.style.source; font-src 'self' https://cdn.jsdelivr.net; object-src 'none'; frame-ancestors 'none';"
    #nginx.ingress.kubernetes.io/content-security-policy: "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://trusted.script.source; img-src 'self' data: https://nyc3.digitaloceanspaces.com https://trusted.image.source; style-src 'self' https://nyc3.digitaloceanspaces.com https://trusted.style.source; font-src 'self' https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com; object-src 'none'; frame-ancestors 'none';"
    #nginx.ingress.kubernetes.io/content-security-policy: "default-src 'self'; script-src 'nonce-<random_nonce_value>' https://trusted.script.source; img-src 'self' data: https://nyc3.digitaloceanspaces.com https://trusted.image.source; style-src 'nonce-<random_nonce_value>' https://trusted.style.source; font-src 'self' https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com; object-src 'none'; frame-ancestors 'none';"
    nginx.ingress.kubernetes.io/content-security-policy: "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com https://trusted.script.source; img-src 'self' data: https://nyc3.digitaloceanspaces.com https://trusted.image.source; style-src 'self' https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com https://trusted.style.source; font-src 'self' https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com; object-src 'none'; frame-ancestors 'non [...]


    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - thesis.hospitaltest.site
    - www.thesis.hospitaltest.site
    secretName: django-k8s-web-tls
  rules:
  - host: thesis.hospitaltest.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thesis-service
            port:
              name: https
  - host: www.thesis.hospitaltest.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thesis-service
            port:
              name: https
