thesis-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thesis-deployment
  labels:
    app: thesis-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: thesis-deployment
  template:
    metadata:
      labels:
        app: thesis-deployment
    spec:
      serviceAccountName: django-k8s-web-serviceaccount
      containers:
      - name: my-thesis-upload
        image: registry.digitalocean.com/container-1/my-thesis-upload:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
      imagePullSecrets:
        - name: container-1


---

apiVersion: v1
kind: Service
metadata:
  name: thesis-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8004
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8004
    
  selector:
    app: thesis-deployment

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-k8s-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/content-security-policy: "default-src 'self'; script-src 'self' 
    https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com https://trusted.script.source; img-src 
    'self' data: https://nyc3.digitaloceanspaces.com https://trusted.image.source; style-src 'self' 
    https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com https://trusted.style.source; font-src 'self' 
    https://cdn.jsdelivr.net https://nyc3.digitaloceanspaces.com; object-src 'none'; frame-ancestors 'none'; connect-src 'self';"


    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - thesis.hospitaltest.site
    - www.thesis.hospitaltest.site
    secretName: django-k8s-web-tls
  rules:
  - host: thesis.hospitaltest.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thesis-service
            port:
              name: https
  - host: www.thesis.hospitaltest.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thesis-service
            port:
              name: https
